# enode-backtester

./: .gitignore  DASHBOARD_FIXES.md  LICENSE  MANIFEST.in  README.md  USERGUIDE.md  backtest_results.json  dashboard_test_results.json  enode_backtester.py  my_strategies.py  pyproject.toml  test.py  test_dashboard.py  test_library.py  test_results.json
.github/workflows/: docs.yml
backtester/: __init__.py  analysis.py  cli.py  data.py  engine.py  event.py  execution.py  metrics.py  models.py  portfolio.py  risk.py  sizer.py  strategy.py
backtester/dashboard/: __init__.py  app.py  callbacks.py  components.py  layout.py  loaders.py  plots.py
docs/: test_import.py
docs/source/: backtester.rst  changelog.rst  conf.py  contributing.rst  dashboard.rst  examples.rst  index.rst  modules.rst  my_strategies.rst  quickstart.rst  risk_management.rst  strategies.rst
docs/source/_static/: custom.css
tests/: test_metrics.py
