[project]
name = "enode-backtester"
version = "0.1.0"
description = "Event-driven backtesting framework for trading strategies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "enode-quant>=0.1.8",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-napoleon>=0.7",
    "scipy>=1.16.3",
    "dash>=3.3.0",
    "plotly>=6.5.0",
    "dash-bootstrap-components>=2.0.4",
    "typer>=0.20.0",
    "numpy>=2.3.5",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "myst-parser>=4.0.1",
    "pytest>=9.0.1",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-napoleon>=0.7",
]
