[project]
name = "enode_backtester"
version = "0.1.5"
description = "Professional event-driven backtesting framework for quantitative trading strategies"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Calin Ignat", email = "calin@enode.com"},
    {name = "Oscar Thiele Serrano", email = "oscarthse@gmail.com"}
]
maintainers = [
    {name = "Enode Team", email = "team@enode.com"}
]
license = {text = "MIT"}
keywords = ["backtesting", "trading", "quantitative", "finance", "strategy", "portfolio", "risk-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "build>=1.3.0",
]

[project.optional-dependencies]
dashboard = [
    "dash>=2.14.0",
    "plotly>=5.15.0",
    "dash-bootstrap-components>=1.4.0"
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.24.0"
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0"
]
all = [
    "enode-backtester[dashboard,docs,dev]"
]

[project.urls]
Homepage = "https://github.com/enode/enode-backtester"
Documentation = "https://enode-backtester.readthedocs.io"
Repository = "https://github.com/enode/enode-backtester"
"Bug Tracker" = "https://github.com/enode/enode-backtester/issues"

[project.scripts]
enode-backtester = "backtester.cli:main"
enode_backtester = "backtester.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "twine>=6.2.0",
]
